--- a/src/scss/_p-technology.scss
+++ b/src/scss/_p-technology.scss
@@ -240,6 +240,7 @@ $technologies: "blockchain", "serverless", "frontend", "community";
 
   @include mq(sm) {
     margin-right: 0px!important;
+    text-align: left;
   }
 }
 
